--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,6 +22,8 @@ nav{
   nav a{
     text-decoration: none;
   }
+
+  
   
   .companyName a span{
     font-family: 'Permanent Marker', cursive;
@@ -44,6 +46,13 @@ nav{
   .show{
     display: none;
   }
+
+  .darkenNav{
+    background: rgb(34, 34, 34);
+    align-items: center;
+    font-weight: 900;
+}
+
 /* Home */
   section{
       width: 100%;
@@ -66,6 +75,8 @@ nav{
     position: absolute;
     bottom: 4em;
     left: 4em;
+    /* top:55%;
+    left:20%; */
     font-size: 150%;
   }
 
@@ -73,6 +84,8 @@ nav{
     position: absolute;
     bottom: 4em;
     right: 4em;
+    /* top:55%;
+    right:20%; */
     font-size: 150%;
   }
   
@@ -85,7 +98,7 @@ nav{
 
   .slide .caption{
     position: absolute;
-    top:45%;
+    top:35%;
     text-align: center;
     width: 100%;
     
@@ -106,6 +119,7 @@ nav{
 
   .caption h2{
     font-family: 'Merriweather', serif;
+    /* font-size: 180%; */
   }
 
   .caption p{
@@ -123,6 +137,27 @@ nav{
    padding-left: 0.8em;
    padding-right: 0.8em;
   } */
+  nav{
+    font-size: 180%;
+  }
+
+  .dropLinks a{
+    /* font-size: 80%; */
+    /* font-weight: 700; */
+  }
+
+  section .fa-chevron-left, section .fa-chevron-right, section .fa-arrow-down{
+    font-size: 170%;
+  } 
+
+  .caption h2{
+    font-size: 180%;
+  }
+
+  .caption p{
+    font-size: 130%;
+  }
+
   }
   
   @media only screen and (min-width: 1024px) {
@@ -134,15 +169,20 @@ nav{
        }
        .dropLinks{
         flex-direction: row;
+        /* white-space: nowrap; */
        }
        
     .dropLinks a{
-      padding-left: 4em;
+      padding-left: 2.5em;
+      font-weight: 700;
     }
   
     nav{
       padding-left: 1.5em;
       padding-right: 1.8em;
     }
+
+   
+
   }
   
