--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,7 +39,7 @@ nav{
   .dropLinks a{
     font-family: 'Merriweather', serif;
       font-size: 70%;
-      padding: 0.7em 1em 0.7em 0;
+      padding: 0.7em 0.8em 0.7em 0;
   }
   
   
@@ -49,8 +49,14 @@ nav{
 
   .darkenNav{
     background: rgb(34, 34, 34);
-    align-items: center;
     font-weight: 900;
+}
+
+.darkenNav .dropLinks{
+  align-items: center;
+}
+.darkenNav .fa-times{
+  padding: 0.5em 0em 0em 0.5em ;
 }
 
 /* Home */
