--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,194 +1,87 @@
 html,body{
     margin:0;
-    color:#ffffff;
+    color:#131623 ;
 }
-nav{
-    /* background: rgba(34, 34, 34,0.7); */
+ nav{
     position: fixed;
     top:0;
     left:0;
     right:0;
     z-index:100;
-    display: flex;
-    justify-content:space-between;
-    align-items:baseline;
-    font-size: 170%;
-    padding:0.3em 0.4em 0 0.4em;
   }
   
   nav, nav a{
-    color:#e4e4e4;
+    color:#131623;
   }
   nav a{
     text-decoration: none;
   }
-
-  
-  
-  .companyName a span{
+  nav span{
     font-family: 'Permanent Marker', cursive;
   }
-  
-  .dropLinks{
+
+  .deskLinks{
+    display: none;
+  }
+
+  .mobLinks{
+    width: 85%;
+    margin: 1em auto;
     display: flex;
     flex-direction: column;
-    align-items:flex-start;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
-  
-  .dropLinks a{
+
+  .mobLinks a {
+    padding: 0.7em 0em;
     font-family: 'Merriweather', serif;
-      font-size: 70%;
-      padding: 0.7em 0.8em 0.7em 0;
+    font-weight: 600;
+}
+
+  nav .navNameIcon{
+    display: flex;
+    justify-content:space-between;
+    align-items:baseline;
+    font-size: 170%;
+    padding:0.3em 0.4em 0.5em 0.4em;
+    border-bottom: 1px solid #131623 ;
   }
-  
-  
+
   .show{
     display: none;
   }
 
-  .darkenNav{
-    background: rgb(34, 34, 34);
-    font-weight: 900;
-}
 
-.darkenNav .dropLinks{
-  align-items: center;
-}
-.darkenNav .fa-times{
-  padding: 0.5em 0em 0em 0.5em ;
-}
-
-/* Home */
-  section{
-      width: 100%;
-      height: 100vh;
-      overflow: hidden;
-      position: relative;
-  }
-
-  .slide{
-      width: 100%;
-      height: 100vh;
-      position: relative;
-      /* background-color: aliceblue;
-      background-image: url('https://images.unsplash.com/photo-1515378960530-7c0da6231fb1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
-      background-repeat:no-repeat;
-      background-size:cover; */
-  }
- 
-  section .fa-chevron-left{
-    position: absolute;
-    bottom: 6em;
-    left: 4em;
-    /* top:55%;
-    left:20%; */
-    font-size: 150%;
-  }
-
-  section .fa-chevron-right{
-    position: absolute;
-    bottom: 6em;
-    right: 4em;
-    /* top:55%;
-    right:20%; */
-    font-size: 150%;
-  }
-  
-  section .fa-arrow-down{
-    position: absolute;
-    bottom: 3em;
-    left: 1em;
-    font-size: 150%;  
-  }
-
-  .slide .caption{
-    position: absolute;
-    top:35%;
-    text-align: center;
-    width: 100%;
-    
-  }
-
-  .caption .topBar{
-    height: 0.2em;
-    width: 3em;
-    background: #fff;
-    margin: 0em auto 1.5em auto;
-  }
-
-  .caption h2, .caption p{
-    margin: 0.2em 0;
-    text-transform: uppercase;
-    padding: 0 1em;
-  }
-
-  .caption h2{
-    font-family: 'Merriweather', serif;
-    /* font-size: 180%; */
-  }
-
-  .caption p{
-    font-family: 'Roboto', sans-serif;
-  }
 
   
   @media only screen and (min-width: 768px) {
-
-  /* .dropLinks a{
-   padding-left: 3em;
-  }
-  
-  nav{
-   padding-left: 0.8em;
-   padding-right: 0.8em;
-  } */
-  nav{
-    font-size: 180%;
-  }
-
-  .dropLinks a{
-    /* font-size: 80%; */
-    /* font-weight: 700; */
-  }
-
-  section .fa-chevron-left, section .fa-chevron-right, section .fa-arrow-down{
-    font-size: 170%;
-  } 
-
-  .caption h2{
-    font-size: 180%;
-  }
-
-  .caption p{
-    font-size: 130%;
-  }
+nav{
+  width:90%;
+  margin: 0 auto;
+}
 
   }
   
   @media only screen and (min-width: 1024px) {
+    nav{
+      width:80%;
+    }
     #hamburger{
         display: none;
        }
-       .show{
+       .deskLinks{
         display: flex;
        }
-       .dropLinks{
-        flex-direction: row;
-        /* white-space: nowrap; */
+
+       .deskLinks a{
+         padding: 0em 0.8em;
        }
        
-    .dropLinks a{
-      padding-left: 2.5em;
-      font-weight: 700;
-    }
-  
-    nav{
-      padding-left: 1.5em;
-      padding-right: 1.8em;
-    }
-
-   
-
   }
   
+  @media only screen and (min-width: 1440px) {
+    nav{
+      width:70%;
+    }
+  }
