--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,7 @@ html,body{
     right:0;
     z-index:100;
     font-family: 'Roboto', sans-serif;
+    background: #fff;
   }
   
   nav, nav a{
@@ -57,10 +58,20 @@ html,body{
   .show{
     display: none;
   }
+  .overlayPage{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    opacity: .5;
+    z-index: 99;
+  }
 
   .home{
     width: 93%;
-    margin: 10em auto 0.2em auto;
+    margin: 6em auto 0.2em auto;
   }
   .intro{
     /* width: 90%; */
