--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -159,7 +159,25 @@ hr {
   margin: 6em auto;
 }
 
+.prodDes {
+  text-align: center;
+}
 
+.prodImg img{
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+}
+.prodDes img{
+  display: block;
+  margin: 0 auto;
+  max-width: 70%;
+}
+
+.prod {
+  width: 80%;
+  margin: 0 auto;
+}
   
   @media only screen and (min-width: 768px) {
 nav{
