Home - whitespacing, text/image alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,7 @@ html,body{
     margin:0;
     color:#131623 ;
     font-family: 'Merriweather', serif;
+    line-height: 1.4;
 }
  nav{
     position: fixed;
@@ -76,7 +77,8 @@ html,body{
 
   .home{
     width: 93%;
-    margin: 6em auto 0.2em auto;
+    margin: 0 auto;
+    padding: 8em 0.2em;
   }
   .intro{
     /* width: 90%; */
@@ -85,11 +87,13 @@ html,body{
   .introImage{
     /* width: 90%; */
     /* margin: 2em auto 6em auto; */
-    padding: 2em 0em 6em 0em;
+    padding: 2em 0em 0em 0em;
   }
 
   .introImage img{
-    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+    max-width: 85%;
   }
   .text{
     text-align: center;
@@ -103,7 +107,8 @@ html,body{
 
   .text p{
     font-size: 120%;
-    line-height: 1.4;
+    width: 85%;
+    margin: 1em auto;
   }
 
   .buttons{
@@ -111,7 +116,7 @@ html,body{
     flex-direction: column;
   }
   .buttons button{
-    margin: 1em auto;
+    margin: 1.3em auto;
     padding: 0.7em 0.8em;
     width: 80%;
     background: #186ee3;
@@ -222,10 +227,21 @@ nav{
 }
 .buttons{
   flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .buttons button{
   width: 35%;
+  margin: 0;
+}
+
+.text p {
+  width: 80%;
+  margin: 2em auto;
+}
+
+.introImage img {
+  max-width: 80%;
 }
 
 .pictionary {
@@ -271,8 +287,8 @@ nav{
     .home{
       width: 80%;
     display: flex;
-    justify-content: space-between;
-    align-items: center
+    justify-content: space-evenly;
+    align-items: flex-start;
     }
 
     .intro{
@@ -286,12 +302,20 @@ nav{
     .text{
       text-align: left;
     }
-
+    .text h1{
+      margin-top: 0;
+    }
+    .text p{
+      margin: 2em 0;
+    }
     .buttons button{
       margin: 1em 2em 1em 0em;
     }
     .pictionary {
       width: 58%;
+    }
+    .buttons{
+      justify-content: flex-start;
     }
   }
 
