--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,9 @@
 html,body{
     margin:0;
-    color:#131623 ;
+    color: #0b1a30;
     font-family: 'Merriweather', serif;
     line-height: 1.4;
+    background: #dceffd;
 }
  nav{
     position: fixed;
@@ -11,18 +12,19 @@ html,body{
     right:0;
     z-index:100;
     font-family: 'Roboto', sans-serif;
-    background: #fff;
+    background: #dceffd;
     transition: all .7s ease;
   }
   
   nav, nav a{
-    color:#131623;
+    color: #0b1a30;
   }
   nav a{
     text-decoration: none;
   }
   nav span{
     font-family: 'Permanent Marker', cursive;
+    color: #5a54f2;
   }
 
   .deskLinks{
@@ -70,7 +72,7 @@ html,body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: #fff;
+    background: #dceffd;
     opacity: .5;
     z-index: 99;
   }
@@ -119,20 +121,20 @@ html,body{
     margin: 1.3em auto;
     padding: 0.7em 0.8em;
     width: 80%;
-    background: #186ee3;
-    border:none;
+    background: #5a54f2;
+    border: none;
     font-size: 100%;
-    color: #F2F7FE;
+    color: #f5ffff;
   }
 
   button:last-child{
-    border: 1px solid #186ee3;
-    background: #F2F7FE;
-    color:#186ee3 ;
+    border: 1px solid #5a54f2;
+    background: #f5ffff;
+    color: #5a54f2
   }
 
 .about {
-    background: #cccbb9;
+    background: #f5ffff;
     padding: 3em 0em 3em 0em;
 }
 
@@ -164,9 +166,10 @@ html,body{
 }
 
 hr {
-  width: 80%;
+  width: 90%;
   border-style: solid;
   margin: 6em auto;
+  color: #acc6ec;
 }
 
 .prodDes {
@@ -243,10 +246,13 @@ nav{
 .introImage img {
   max-width: 80%;
 }
-
+.about {
+  padding: 4em 0em;
+}
 .pictionary {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  padding: 2em 0em;
 }
 .pict {
   width: 27%;
@@ -273,8 +279,13 @@ nav{
         width: 65%;
       }
 
+      .about {
+        padding: 5em 0em;
+      }
+
       .pictionary{
         width: 80%;
+        padding: 3em 0em;
         margin: 0 auto;
       }
   }
@@ -311,11 +322,18 @@ nav{
     .buttons button{
       margin: 1em 2em 1em 0em;
     }
+    .about {
+      padding: 6em 0em;
+    }
     .pictionary {
       width: 58%;
+      padding: 4em 0em;
     }
     .buttons{
       justify-content: flex-start;
+    }
+    hr{
+      width: 58%;
     }
   }
 
@@ -323,9 +341,16 @@ nav{
   nav, .home{
     width: 45%;
   }
-
+  .about {
+    padding: 7em 0em;
+  }
   .pictionary {
     width: 38%;
+    padding: 5em 0em;
+}
+
+hr{
+  width: 38%;
 }
   
   }
