Projects section - responsiveness , whitespacing, alignments

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,8 +2,16 @@ html,body{
     margin:0;
     color: #0b1a30;
     font-family: 'Merriweather', serif;
-    line-height: 1.4;
+    line-height: 1.6;
     background: #dceffd;
+}
+h3 {
+  font-size: 130%;
+  font-weight: 900;
+  font-family: 'Roboto', sans-serif;
+}
+p{
+  font-size: 120%;
 }
  nav{
     position: fixed;
@@ -72,7 +80,7 @@ html,body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: #dceffd;
+    background: #fff;
     opacity: .5;
     z-index: 99;
   }
@@ -108,7 +116,7 @@ html,body{
   }
 
   .text p{
-    font-size: 120%;
+    /* font-size: 120%; */
     width: 85%;
     margin: 1em auto;
   }
@@ -172,14 +180,24 @@ hr {
   color: #acc6ec;
 }
 
+.products {
+  background: #fcfbff;
+  padding: 3em 0em;
+}
 .prodDes {
   text-align: center;
 }
-
+.prodDes a {
+  text-decoration: none;
+  font-size: 110%;
+  color: #5a54f2;
+  /* padding: 1em 0em; */
+}
 .prodImg img{
   display: block;
-  margin: 0 auto;
+  margin: 0.8em auto 0em auto;
   max-width: 100%;
+  box-shadow:0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .prodDes img{
   display: block;
@@ -188,8 +206,9 @@ hr {
 }
 
 .prod {
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
+  padding: 3em 0em;
 }
 
 .card img{
@@ -258,6 +277,25 @@ nav{
   width: 27%;
   margin: 0em;
 }
+
+.products{
+  padding: 4em 0em;
+}
+
+.prod{
+  padding: 4em 0em;
+}
+
+
+.prodDes img {
+  max-width: 37%;
+}
+
+.prodDesCont h3, .prodDesCont p {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
   }
   
   @media only screen and (min-width: 1024px) {
@@ -288,6 +326,59 @@ nav{
         padding: 3em 0em;
         margin: 0 auto;
       }
+
+      .products{
+        padding: 5em 0em;
+      }
+
+      .prod {
+        width: 100%;
+        margin: 0;
+        padding: 5em 0em;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    .prodImg {
+      width: 50%;
+      padding: 0em 0em;
+  }
+  .prodImg img {
+    width: 75%;
+    margin: 0 0 0 auto;
+}
+
+.prodDes {
+  width: 50%;
+  padding: 0em 1.5em;
+  text-align: left;
+}
+
+
+.prodDesCont {
+  width: 50%;
+}
+
+.prod:nth-child(2),.prod:nth-child(4){
+  flex-direction: row-reverse;
+}
+
+.prod:nth-child(2) .prodImg img, .prod:nth-child(4) .prodImg img {
+  margin-left: 0;
+}
+
+.prod:nth-child(2) .prodDesCont, .prod:nth-child(4) .prodDesCont {
+  margin-left: auto;
+}
+
+.prodDesCont h3, .prodDesCont p {
+  width: 100%;
+  margin-top: 0;
+}
+
+
+
   }
   
   @media only screen and (min-width: 1440px) {
@@ -335,6 +426,23 @@ nav{
     hr{
       width: 58%;
     }
+
+    .products{
+      padding: 6em 0em;
+    }
+    
+    .prod{
+      padding: 6em 0em;
+    }
+    .prodDesCont {
+      width: 45%;
+    }
+
+    .prodImg img {
+      width: 65%;
+  }
+    
+
   }
 
   @media only screen and (min-width: 2560px) {
@@ -352,5 +460,22 @@ nav{
 hr{
   width: 38%;
 }
+
+.products{
+  padding: 7em 0em;
+}
+
+.prod{
+  padding: 7em 0em;
+}
+
+.prodDesCont {
+  width: 35%;
+}
+
+.prodImg img {
+  width: 55%;
+}
+
   
   }
