--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,7 +135,7 @@ p{
     color: #f5ffff;
   }
 
-  button:last-child{
+  button:nth-child(2){
     border: 1px solid #5a54f2;
     background: #f5ffff;
     color: #5a54f2
@@ -211,26 +211,53 @@ hr {
   padding: 3em 0em;
 }
 
+.card {
+  width: 90%;
+  margin: 2em auto;
+  padding: 2em 0em;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  background: #fcfbff;
+}
+
+.cardImg {
+  display: flex;
+  justify-content: space-evenly;
+  width: 70%;
+  margin: 0 auto;
+}
+
 .card img{
+  /* display: block;
+  margin: 0 auto; */
+  max-width: 20%;
+}
+
+.card h3, .card p {
+  text-align: center;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.upcoming {
+  background: #f5ffff;
+  padding: 3em 0em;
+}
+
+.upcoming h2 {
+  text-align: center;
+  margin: 0;
+  padding: 0em 0em 1em 0em;
+}
+.card button {
   display: block;
   margin: 0 auto;
-  max-width: 30%;
-}
-
-.card h3, .card p{
-  text-align: center;
-}
-
-.upcoming{
-  background: #cccbb9;
-}
-
-.upcoming h2{
-  text-align: center;
-}
-.card button{
-  display: block;
-  margin: 0 auto;
+  /* margin: 1.3em auto; */
+  padding: 0.7em 0.8em;
+  width: 65%;
+  background: #5a54f2;
+  border: none;
+  font-size: 100%;
+  color: #f5ffff;
 }
 
 .staff img{
@@ -295,6 +322,24 @@ nav{
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.upcoming {
+  padding: 4em 0em;
+}
+
+.cardCont {
+  display: flex;
+  justify-content: space-around;
+  padding: 3em 0em;
+}
+
+.card {
+  width: 30%;
+  margin: 0;
+}
+.card h3, .card p {
+  width: 90%;
 }
   }
   
@@ -377,6 +422,15 @@ nav{
   margin-top: 0;
 }
 
+.upcoming {
+  padding: 5em 0em;
+}
+
+.cardCont {
+  width: 85%;
+  margin: 0 auto;
+  padding: 4em 0em;
+}
 
 
   }
@@ -441,7 +495,20 @@ nav{
     .prodImg img {
       width: 65%;
   }
-    
+
+  .upcoming {
+    padding: 6em 0em;
+  }
+  
+  .cardCont {
+    width: 65%;
+    padding: 5em 0em;
+  }
+  
+  .card {
+    width: 27%;
+  }
+ 
 
   }
 
@@ -475,6 +542,18 @@ hr{
 
 .prodImg img {
   width: 55%;
+}
+.upcoming {
+  padding: 7em 0em;
+}
+
+.cardCont {
+  width: 50%;
+  padding: 6em 0em;
+}
+
+.card {
+  width: 25%;
 }
 
   
