--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -243,7 +243,7 @@ hr {
   padding: 3em 0em;
 }
 
-.upcoming h2 {
+.upcoming h2, .team h2 {
   text-align: center;
   margin: 0;
   padding: 0em 0em 1em 0em;
@@ -260,10 +260,47 @@ hr {
   color: #f5ffff;
 }
 
-.staff img{
+.team {
+  background: #fcfbff;
+  padding: 3em 0em;
+}
+
+.staff {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border-bottom: 1px solid #acc6ec;
+  width: 80%;
+  margin: 0 auto;
+  padding: 2em 0em;
+}
+.staffImg{
+  width: 35%;
+  /* border-radius: 50%; */
+}
+.staff img {
   display: block;
   margin: 0 auto;
-  max-width: 30%;
+  max-width: 100%;
+  border-radius: 50%;
+}
+.staffDes {
+  width: 55%;
+  text-align: left;
+}
+
+.staffDes span {
+  display: block;
+}
+.staffDes h3, .staffDes p {
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.staffDes p {
+  font-size: 75%;
+  color: #5a54f2;
+  font-weight: 600;
 }
   @media only screen and (min-width: 768px) {
 nav{
@@ -340,6 +377,37 @@ nav{
 }
 .card h3, .card p {
   width: 90%;
+}
+.team{
+  padding: 4em 0em;
+}
+.teamCont {
+  display: flex;
+  justify-content: space-around;
+  /* align-items: baseline; */
+}
+.staff {
+  /* display: flex; */
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: baseline; */
+  border-bottom: none;
+  width: 15%;
+  margin: 0;
+  padding: 3em 0em;
+}
+
+.staffImg {
+  width: 100%;
+}
+
+.staffDes {
+  width: 100%;
+  text-align: center;
+}
+
+.staffDes h3{
+  font-size: 110%;
 }
   }
   
@@ -432,6 +500,13 @@ nav{
   padding: 4em 0em;
 }
 
+.team{
+  padding: 5em 0em;
+}
+
+.staff{
+  padding: 4em 0em;
+}
 
   }
   
@@ -508,7 +583,18 @@ nav{
   .card {
     width: 27%;
   }
- 
+  .team{
+    padding: 6em 0em;
+  }
+  
+  .staff{
+    padding: 5em 0em;
+  }
+  
+  .teamCont{
+    width: 75%;
+    margin: 0 auto;
+  }
 
   }
 
@@ -556,5 +642,17 @@ hr{
   width: 25%;
 }
 
+.teamCont{
+  width: 50%;
+  margin: 0 auto;
+}
+
+.team{
+  padding: 7em 0em;
+}
+
+.staff{
+  padding: 6em 0em;
+}
   
   }
