--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -243,7 +243,7 @@ hr {
   padding: 3em 0em;
 }
 
-.upcoming h2, .team h2 {
+.upcoming h2, .team h2 , .social h2{
   text-align: center;
   margin: 0;
   padding: 0em 0em 1em 0em;
@@ -301,6 +301,83 @@ hr {
   font-size: 75%;
   color: #5a54f2;
   font-weight: 600;
+}
+
+.social {
+  background: #fff;
+  /* width: 95%; */
+  /* margin: 0; */
+  padding: 3em 0em;
+}
+
+.socialCont {
+  padding: 2em 0em;
+}
+.twitter {
+  /* padding: 2em 0em 0em 0em; */
+  width: 90%;
+  margin: 0 auto;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.twitterButtons {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 1em 0em;
+}
+
+.youtube{
+  width: 95%;
+  margin: 2em auto 0em auto;
+}
+.iframeCont {
+  position: relative;
+  width: 100%;
+  /* margin: 2em auto 0em auto; */
+  overflow: hidden;
+  padding-top: 56.25%;
+}
+
+.iframeCont iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+.ytsubscribe{
+  width: 100%;
+  /* margin: 0em auto 0em auto; */
+}
+.ytsubscribe iframe{
+  width: 100%;
+  height: 72px;
+}
+
+.email{
+  width: 70%;
+  margin: 2em auto;
+}
+
+.email button {
+  display: flex;
+  justify-content: space-around;
+  border: 1px solid #5a54f2;
+  background: #f5ffff;
+  color: #5a54f2;
+  /* display: block; */
+  /* margin: 2em auto; */
+  /* margin: 1.3em auto; */
+  padding: 0.7em 0.8em;
+  width: 100%;
+  background: #5a54f2;
+  /* border: none; */
+  font-size: 110%;
+  color: #f5ffff;
 }
   @media only screen and (min-width: 768px) {
 nav{
@@ -409,6 +486,26 @@ nav{
 .staffDes h3{
   font-size: 110%;
 }
+.social {
+  padding: 4em 0em;
+}
+
+.socialCont {
+  padding: 3em 0em;
+}
+/* 
+.twitter, .iframeCont, .ytsubscribe{
+  width: 70%;
+} */
+.twitter, .youtube, .email{
+  width: 70%;
+}
+/* .email button{
+  width: 40%;
+} */
+.email {
+  width: 40%;
+}
   }
   
   @media only screen and (min-width: 1024px) {
@@ -508,6 +605,31 @@ nav{
   padding: 4em 0em;
 }
 
+.socialCont {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.twitter, .youtube {
+  width: 47%;
+  margin: 0;
+}
+
+.email{
+  width: 30%;
+  margin: 3em 0em;
+}
+
+.social {
+  padding: 5em 0em;
+}
+
+.socialCont {
+  padding: 4em 0em;
+}
+
   }
   
   @media only screen and (min-width: 1440px) {
@@ -595,7 +717,29 @@ nav{
     width: 75%;
     margin: 0 auto;
   }
+  .twitter{
+    width: 28%;
+    margin: 0;
+  }
 
+   .youtube {
+    width: 38%;
+    margin: 0;
+  }
+  
+  .email{
+    width: 15%;
+    margin: 0em;
+  }
+
+  .social {
+    padding: 6em 0em;
+  }
+  
+  .socialCont {
+    padding: 5em 0em;
+  }
+  
   }
 
   @media only screen and (min-width: 2560px) {
@@ -652,6 +796,29 @@ hr{
 }
 
 .staff{
+  padding: 6em 0em;
+}
+
+.twitter{
+  width: 22%;
+  margin: 0;
+}
+
+ .youtube {
+  width: 38%;
+  margin: 0;
+}
+
+.email{
+  width: 10%;
+  margin: 0em;
+}
+
+.social {
+  padding: 7em 0em;
+}
+
+.socialCont {
   padding: 6em 0em;
 }
   
