--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,9 @@ h3 {
 p{
   font-size: 120%;
 }
+.sectionSpan{
+  color: #5a54f2;
+}
  nav{
     position: fixed;
     top:0;
@@ -88,7 +91,7 @@ p{
   .home{
     width: 93%;
     margin: 0 auto;
-    padding: 8em 0.2em;
+    padding: 6em 0.2em;
   }
   .intro{
     /* width: 90%; */
@@ -213,7 +216,7 @@ hr {
 
 .card {
   width: 90%;
-  margin: 2em auto;
+  margin: 4em auto;
   padding: 2em 0em;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   background: #fcfbff;
@@ -243,7 +246,7 @@ hr {
   padding: 3em 0em;
 }
 
-.upcoming h2, .team h2 , .social h2{
+.upcoming h2, .team h2 , .social h2, .about h2, .products h2{
   text-align: center;
   margin: 0;
   padding: 0em 0em 1em 0em;
@@ -328,7 +331,7 @@ hr {
 
 .youtube{
   width: 95%;
-  margin: 2em auto 0em auto;
+  margin: 4em auto 0em auto;
 }
 .iframeCont {
   position: relative;
@@ -360,7 +363,7 @@ hr {
 
 .email{
   width: 70%;
-  margin: 2em auto;
+  margin: 4em auto 0em auto;
 }
 
 .email button {
@@ -391,7 +394,7 @@ footer a {
   color: #0b1a30;
   text-transform: uppercase;
   font-size: 120%;
-  padding: 0.7em 0em;
+  padding: 0.5em 0em;
   font-weight: 700;
 }
 footer span {
@@ -407,6 +410,7 @@ nav{
 
 .home{
   width: 90%;
+  padding: 8em 0.2em;
 }
 .buttons{
   flex-direction: row;
