Create Hero Content

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,14 +2,15 @@ html,body{
   margin: 0;
   height: 100%;
   font-family: 'Lora', serif;
-  line-height: 1.6;
+  line-height: 1.8;
+  -webkit-tap-highlight-color: transparent;
 }
 
 a{
   text-decoration:none;
 }
 .home{
-  height: 100%;
+  min-height: 100%;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),url('../images/hero-v.jpg');
   background-repeat: no-repeat;
   background-position: center center;
@@ -28,7 +29,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   font-size: 180%;
-  padding: 0.8em 0.7em;
+  padding: 0.6em 0.7em;
 }
 
 .logo {
@@ -40,7 +41,9 @@ nav {
   font-size: 25%;
   padding-left: 0.4em;
 }
-
+.menu-button, .nav-header .font{
+  cursor: pointer;
+}
 .menu-text{
     font-size: 50%;
     vertical-align: middle;
@@ -108,6 +111,41 @@ nav {
   visibility: hidden;
 }
 
+.home-content {
+  width: 86%;
+  margin: 4em auto 0em auto;
+  text-align: center;
+}
+
+.home-content h1 {
+  font-size: 90%;
+  color: rgba(255, 255, 255, .8);
+}
+
+.home-message p {
+  font-size: 200%;
+  font-weight: 900;
+  line-height: 1.3;
+}
+
+.home-social{
+  display: none;
+}
+
+.home-buttons {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5em 0em 2em 0em;
+}
+
+.home-buttons a {
+  color: #fff;
+  border: 2px solid #fff;
+  padding: 0.5em 0em;
+  margin-bottom: 1em;
+  font-weight: 600;
+}
+
 @media only screen and (min-width: 768px) {
   .menu-text{
     visibility: visible;
@@ -116,5 +154,90 @@ nav {
   nav {
     font-size: 185%;
     padding: 0.8em 1em;
+}
+
+.home-content {
+  width: 85%;
+  margin: 6em auto 0em auto;
+  text-align: left;
+}
+.home-content h1 {
+  font-size: 95%;
+}
+.home-message {
+  display: flex;
+  justify-content: space-between;
+}
+.home-message p {
+  font-size: 250%;
+  width: 80%;
+  margin-top: 0;
+}
+.home-social {
+  display: flex;
+  flex-direction: column;
+  font-size: 100%;
+}
+.home-social .font {
+  border: 2px solid #fff;
+  width: 1em;
+  height: 1em;
+  padding: 0.5em;
+  margin-bottom: 1em;
+  border-radius: 50%;
+}
+.home-buttons {
+  display: flex;
+  flex-direction: row;
+  padding: 1em 0em 2em 0em;
+}
+.home-buttons a {
+  margin: 0em 2em 0em 0em;
+  width: 30%;
+  text-align: center;
+}
+}
+
+@media only screen and (min-width: 1024px) {
+  .home-content {
+    margin: 8em auto 0em auto;
+}
+
+.home-content h1 {
+  font-size: 100%;
+}
+
+.home-message p {
+  font-size: 344%;
+}
+.home-buttons a {
+  width: 25%;
+}
+}
+
+@media only screen and (min-width: 1440px) {
+  .home-content {
+    margin: 10em auto 0em auto;
+}
+.home-message p {
+  font-size: 375.3%;
+}
+.home-buttons a {
+  width: 20%;
+}
+}
+
+@media only screen and (min-width: 2560px) {
+  .home-content {
+    margin: 20em auto 0em auto;
+}
+
+.home-message p {
+  font-size: 398%;
+  width: 60%;
+}
+
+.home-buttons a {
+  width: 10%;
 }
 }
