--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,9 @@ a{
   background-attachment: fixed;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .blue{
@@ -28,8 +31,14 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-family: 'Montserrat', sans-serif;
   font-size: 180%;
+  color: #fff;
   padding: 0.6em 0.7em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .logo {
@@ -113,13 +122,15 @@ nav {
 
 .home-content {
   width: 86%;
-  margin: 4em auto 0em auto;
+  /* margin: 4em auto 0em auto; */
   text-align: center;
+  padding-top: 7em;
 }
 
 .home-content h1 {
   font-size: 90%;
   color: rgba(255, 255, 255, .8);
+  margin: 0;
 }
 
 .home-message p {
@@ -158,7 +169,7 @@ nav {
 
 .home-content {
   width: 85%;
-  margin: 6em auto 0em auto;
+  /* margin: 6em auto 0em auto; */
   text-align: left;
 }
 .home-content h1 {
@@ -200,7 +211,7 @@ nav {
 
 @media only screen and (min-width: 1024px) {
   .home-content {
-    margin: 8em auto 0em auto;
+    /* margin: 8em auto 0em auto; */
 }
 
 .home-content h1 {
@@ -217,7 +228,7 @@ nav {
 
 @media only screen and (min-width: 1440px) {
   .home-content {
-    margin: 10em auto 0em auto;
+    /* margin: 10em auto 0em auto; */
 }
 .home-message p {
   font-size: 375.3%;
@@ -229,7 +240,7 @@ nav {
 
 @media only screen and (min-width: 2560px) {
   .home-content {
-    margin: 20em auto 0em auto;
+    /* margin: 20em auto 0em auto; */
 }
 
 .home-message p {
